# interview-retro

./: .env.example  .gitignore  README.md  pyproject.toml  setup.sh
.claude/: settings.json
.github/hooks/: agentStop.js  hooks.json
backend/: .env  server.py
backend/agents/: agents.py
backend/crews/: crews.py
backend/storage/: models.py
dashboard/: index.html
ollama-bridge/: pyproject.toml  server.py
src/: crew.py
src/interview_retro/: analysis.py  crew.py  events.py  listener.py  llm.py  main.py
src/interview_retro/config/: agents.yaml  debate_agents.yaml  debate_tasks.yaml  extraction_agents.yaml  extraction_tasks.yaml  tasks.yaml
tests/: test_analysis.py  test_flow_helpers.py
