[project]
name = "interview-retro"
version = "1.0.0"
description = "AI-powered interview analysis with CrewAI + OpenRouter"
requires-python = ">=3.11"
dependencies = [
    # ── Web server ─────────────────────────────────────────────────────────
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "aiofiles>=24.1.0",
    # ── CrewAI + LiteLLM ────────────────────────────────────────────────────
    "crewai[tools]>=0.80.0",
    "crewai-tools>=0.17.0",
    "litellm>=1.51.0",
    # ── Database ───────────────────────────────────────────────────────────
    "sqlalchemy>=2.0.35",
    "alembic>=1.13.3",
    # ── Utilities ──────────────────────────────────────────────────────────
    "pydantic>=2.9.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.2",
    "pendulum>=3.0.0",
    "rich>=13.9.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
interview_retro = "interview_retro.main:kickoff"
kickoff = "interview_retro.main:kickoff"
plot = "interview_retro.main:plot"

[tool.crewai]
type = "flow"

[tool.hatch.build.targets.wheel]
packages = ["backend", "src/interview_retro"]

[tool.uv]
# tiktoken 0.8.0 uses pyo3 0.22 which doesn't support Python 3.14; override to 0.13.0+
override-dependencies = [
    "tiktoken>=0.13.0",
    "pydantic>=2.13.4",
    "pydantic-core>=2.46.4",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"

[dependency-groups]
dev = [
    "ruff>=0.15.13",
    "pyright>=1.1.0",
    "pytest>=8.0.0",
]

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = [
    "ANN",   # flake8-annotations: enforce type annotations
]

[tool.pyright]
pythonVersion = "3.14"
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"
extraPaths = ["backend"]
reportMissingTypeArgument = "error"
reportMissingParameterType = "error"
reportReturnType = "error"
reportUnknownVariableType = "error"
reportUnknownParameterType = "error"
reportAny = "error"
